# Recd-Server

./: .gitignore  Cargo.toml  README.md
backend/: recd.db
backend/src/: api_get.rs  api_post.rs  main.rs
src/: App.tsx  api_get.rs  db_setup.rs  main.rs  media_info.rs  recommendation.rs
src/api_routes/: admin.rs  card.rs  follow.rs  image.rs  login.rs  media.rs  mod.rs  page.rs  review.rs  search.rs  tag.rs  todo.rs  user.rs
src/components/assets/card/: Card.css  Card.tsx
src/components/user-profile/: UserProfile.tsx
src/pages/home/: home.tsx
