[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
axum = "0.8.4" # Or the latest compatible version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "runtime-async-std-native-tls",
] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.13.1", features = ["attributes"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
http = "1.3.1"
